Reimagine course program

--- a/Lectures/week04_approx.ipynb
+++ b/Lectures/week04_approx.ipynb
@@ -63,12 +63,25 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def f(x: float):\n",
-    "    return np.sin(x) * x/5\n",
-    "\n",
+    "    return np.sin(x) * x/5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def lagrange_interpolation(x_points, \n",
     "                           y_points, \n",
     "                           x):\n",
@@ -101,8 +114,15 @@
     "        return np.prod(terms, axis=0)\n",
     "\n",
     "    return (sum(y_points[i] * basis_polynomial(i, x) \n",
-    "                for i in range(len(x_points))))\n",
-    "\n",
+    "                for i in range(len(x_points))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "N = 10\n",
     "x_points = np.linspace(0, 5, N)\n",
     "y_points = f(x_points)\n",
@@ -110,15 +130,22 @@
     "x_new = np.linspace(0, 5, 100)\n",
     "y_lagrange = lagrange_interpolation(x_points, \n",
     "                                    y_points, \n",
-    "                                    x_new)\n",
-    "\n",
+    "                                    x_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(6, 6))\n",
-    "plt.plot(x_points, y_points, 'bo', label='Исходные точки')\n",
-    "plt.plot(x_new, y_lagrange, 'r-', label='Интерполяция Лагранжа')\n",
-    "plt.plot(x_new, f(x_new), 'g--', label='Оригинальная функция')\n",
+    "plt.plot(x_points, y_points, 'bo', label='Data')\n",
+    "plt.plot(x_new, y_lagrange, 'r-', label='Interpolation')\n",
+    "plt.plot(x_new, f(x_new), 'g--', label='True function')\n",
     "plt.xlabel('x')\n",
     "plt.ylabel('y')\n",
-    "plt.title('Интерполяция Лагранжа')\n",
+    "plt.title('Lagrange interpolation')\n",
     "plt.axis('equal')\n",
     "plt.legend()\n",
     "plt.show()"
@@ -141,7 +168,9 @@
     "для всех $ x $ из этого компактного подмножества, где:\n",
     "- $ N $ — количество нейронов в скрытом слое,\n",
     "- $ a_i, w_i, b_i $ — параметры сети (веса и смещения),\n",
-    "- $\\sigma$ — нелинейная активационная функция, например, сигмоидальная функция."
+    "- $\\sigma$ — нелинейная активационная функция, например, сигмоидальная функция.\n",
+    "\n",
+    "> Она еще встретится далее в курсе"
    ]
   },
   {
@@ -154,9 +183,15 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class SimpleNN(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(SimpleNN, self).__init__()\n",
@@ -166,9 +201,15 @@
     "    def forward(self, x):\n",
     "        x = torch.tanh(self.linear1(x))\n",
     "        x = self.linear2(x)\n",
-    "        return x\n",
-    "\n",
-    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "N = 10\n",
     "x_points = np.linspace(0, 5, N)\n",
     "y_points = f(x_points)\n",
@@ -180,8 +221,15 @@
     "\n",
     "model = SimpleNN()\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
-    "\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "epochs = 10000\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
@@ -189,26 +237,38 @@
     "    output = model(x_train)\n",
     "    loss = criterion(output, y_train)\n",
     "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_test = torch.tensor(x_new, dtype=torch.float32).view(-1, 1)\n",
     "y_pred_nn = model(x_test).detach().numpy()\n",
     "\n",
     "mse_lagrange = np.mean((y_lagrange - f(x_new))**2)\n",
     "mse_nn = np.mean((y_pred_nn.flatten() - f(x_new))**2)\n",
     "\n",
-    "print(f\"MSE Лагранжа: {mse_lagrange:.4f}\")\n",
-    "print(f\"MSE Нейронной сети: {mse_nn:.4f}\")\n",
-    "\n",
+    "print(f\"MSE Lagrange: {mse_lagrange:.4f}\")\n",
+    "print(f\"MSE NN: {mse_nn:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(6, 6))\n",
-    "plt.plot(x_points, y_points, 'bo', label='Исходные точки')\n",
-    "plt.plot(x_test.numpy(), y_pred_nn, 'r-', label='Нейронная сеть')\n",
-    "plt.plot(x_test.numpy(), np.sin(x_test.numpy()) * x_test.numpy() / 5, \n",
-    "         'g--', label='Оригинальная функция sin(x)')\n",
-    "\n",
+    "plt.plot(x_points, y_points, 'bo', label='Data')\n",
+    "plt.plot(x_test.numpy(), y_pred_nn, 'r-', label='NN')\n",
+    "plt.plot(x_test.numpy(), f(x_test.numpy()), 'g--', label='Original function')\n",
     "plt.xlabel('x')\n",
     "plt.ylabel('y')\n",
-    "plt.title('Сравнение методов аппроксимации')\n",
+    "plt.title('NN interpolation')\n",
     "plt.axis('equal')\n",
     "plt.legend()\n",
     "plt.show()"
@@ -281,29 +341,48 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "\n",
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class SingleNeuron(nn.Module):\n",
     "    def __init__(self, activation):\n",
-    "        super(SingleNeuron, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.linear = nn.Linear(1, 1)\n",
     "        self.activation = activation\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.linear(x)\n",
     "        x = self.activation(x)\n",
-    "        return x\n",
-    "\n",
-    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_points = np.linspace(-10, 10, 100, dtype=np.float32).reshape(-1, 1)\n",
     "\n",
     "activations = {\n",
     "    'ReLU': torch.relu,\n",
     "    'Sigmoid': torch.sigmoid,\n",
     "    'Tanh': torch.tanh\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(15, 4))\n",
     "\n",
     "for ax, (name, activation) in zip(axes, activations.items()):\n",
@@ -311,8 +390,8 @@
     "    with torch.no_grad():\n",
     "        y_pred = model(torch.tensor(x_points)).numpy()\n",
     "    \n",
-    "    ax.plot(x_points, y_pred, label=f'Активация: {name}')\n",
-    "    ax.set_title(f'Функция активации: {name}')\n",
+    "    ax.plot(x_points, y_pred, label=f'Activation: {name}')\n",
+    "    ax.set_title(f'Activation: {name}')\n",
     "    ax.set_xlabel('x')\n",
     "    ax.set_ylabel('y')\n",
     "    ax.legend()\n",
@@ -343,9 +422,15 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class SimpleNN(nn.Module):\n",
     "    def __init__(self, activation, num_neurons):\n",
     "        super(SimpleNN, self).__init__()\n",
@@ -356,20 +441,38 @@
     "    def forward(self, x):\n",
     "        x = self.activation(self.linear1(x))\n",
     "        x = self.linear2(x)\n",
-    "        return x\n",
-    "\n",
-    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def f(x):\n",
-    "    return np.sin(x) * x / 5\n",
-    "\n",
-    "\n",
+    "    return np.sin(x) * x / 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_points = np.linspace(0, 5, 100, dtype=np.float32)\n",
     "y_points = f(x_points)\n",
     "\n",
     "x_train = torch.tensor(x_points, dtype=torch.float32).view(-1, 1)\n",
-    "y_train = torch.tensor(y_points, dtype=torch.float32).view(-1, 1)\n",
-    "\n",
-    "\n",
+    "y_train = torch.tensor(y_points, dtype=torch.float32).view(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def train_and_plot(activation, num_neurons, ax, title):\n",
     "    model = SimpleNN(activation, num_neurons)\n",
     "    criterion = nn.MSELoss()\n",
@@ -391,22 +494,37 @@
     "    ax.set_title(title)\n",
     "    ax.set_xlabel('x')\n",
     "    ax.set_ylabel('y')\n",
-    "    ax.legend()\n",
-    "\n",
+    "    ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "activations = {\n",
     "    'ReLU': torch.relu,\n",
     "    'Sigmoid': torch.sigmoid,\n",
     "    'Tanh': torch.tanh\n",
     "}\n",
     "\n",
-    "num_neurons_list = [1, 5, 10, 50]\n",
+    "num_neurons_list = [1, 5, 10, 50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, axes = plt.subplots(nrows=len(num_neurons_list), \n",
     "                         ncols=3, figsize=(15, 12))\n",
     "\n",
     "for col, (name, activation) in enumerate(activations.items()):\n",
     "    for row, num_neurons in enumerate(num_neurons_list):\n",
     "        train_and_plot(activation, num_neurons, axes[row, col], \n",
-    "                       f'{name} с {num_neurons} нейронами')\n",
+    "                       f'{name} с {num_neurons} neurons')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
