--- a/Lectures/week05_nn.ipynb
+++ b/Lectures/week05_nn.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://www.researchgate.net/profile/Sufyan-Al-Janabi/publication/335856901/figure/fig2/AS:804017303191552@1568704071230/a-Simple-neural-network-architecture-b-Simple-architecture-of-deep-neural-network.ppm\" alt=\"Описание изображения\" width=\"800\">"
+    "<img src=\"../images/nn_architecture.ppm\" alt=\"Архитектура нейронной сети\" width=\"800\">"
    ]
   },
   {
@@ -61,16 +61,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "batch_size = 4\n",
     "num_features = 10\n",
     "input_tensor = torch.randn(batch_size, num_features)\n",
     "\n",
-    "print(\"Входной тензор:\")\n",
+    "print(\"Input tensor:\")\n",
     "print(input_tensor)\n",
-    "print(\"Размер входного тензора:\", input_tensor.shape)"
+    "print(\"Input tensor shape:\", input_tensor.shape)"
    ]
   },
   {
@@ -97,9 +103,15 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "\n",
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "in_features = 10 # - размерность входного вектора\n",
     "out_features = 20 # - размерность выходного вектора\n",
     "bias = True # - использование смещения (по умолчанию True)\n",
@@ -110,8 +122,8 @@
     "x = torch.randn(batch_size, in_features)\n",
     "output = fc_layer(x)\n",
     "\n",
-    "print(\"Размер входного тензора:\", x.shape)\n",
-    "print(\"Размер выхода полносвязного слоя:\", output.shape)"
+    "print(\"Input tensor shape:\", x.shape)\n",
+    "print(\"Output tensor shape:\", output.shape)"
    ]
   },
   {
@@ -134,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/1/19/2D_Convolution_Animation.gif\" alt=\"Описание изображения\" width=\"600\">"
+    "<img src=\"../images/2d_convolution_animation.gif\" alt=\"Convolution\" width=\"600\">"
    ]
   },
   {
@@ -156,9 +168,15 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
-    "from torchvision import datasets, transforms\n",
-    "\n",
-    "\n",
+    "from torchvision import datasets, transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "transform = transforms.Compose([transforms.ToTensor()])\n",
     "dataset = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
     "image, label = dataset[0]\n",
@@ -176,8 +194,15 @@
     "conv_output = F.relu(conv_layer(input_tensor))\n",
     "\n",
     "print(\"Размер входного тензора:\", input_tensor.shape)\n",
-    "print(\"Размер выхода сверточного слоя:\", conv_output.shape)\n",
-    "\n",
+    "print(\"Размер выхода сверточного слоя:\", conv_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(6, 4))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -211,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://nico-curti.github.io/NumPyNet/NumPyNet/images/maxpool.gif\" alt=\"Описание изображения\" width=\"600\">"
+    "<img src=\"../images/maxpool_animation.gif\" alt=\"Pooling\" width=\"600\">"
    ]
   },
   {
@@ -222,9 +247,15 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "transform = transforms.Compose([transforms.ToTensor()])\n",
     "dataset = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
     "image, label = dataset[0]\n",
@@ -238,8 +269,15 @@
     "pooled_output = pool_layer(input_tensor)\n",
     "\n",
     "print(\"Входное изображение shape:\", input_tensor.shape)\n",
-    "print(\"После пулинга shape:\", pooled_output.shape)\n",
-    "\n",
+    "print(\"После пулинга shape:\", pooled_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(6, 4))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -279,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://media.geeksforgeeks.org/wp-content/uploads/20231204130132/RNN-vs-FNN-660.png\" alt=\"Описание изображения\" width=\"600\">"
+    "<img src=\"../images/rec_layer.png\" alt=\"Рекуррентный слой\" width=\"600\">"
    ]
   },
   {
@@ -294,9 +332,15 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "\n",
+    "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class LSTMSequenceModel(nn.Module):\n",
     "    def __init__(self, vocab_size, embed_dim, hidden_dim, num_layers=1):\n",
     "        super(LSTMSequenceModel, self).__init__()\n",
@@ -313,9 +357,15 @@
     "        out, (h_n, _) = self.lstm(embed)\n",
     "        last_hidden = h_n[-1]\n",
     "        logits = self.fc(last_hidden)\n",
-    "        return logits\n",
-    "\n",
-    "\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_dataset(sequence, seq_len):\n",
     "    \"\"\"\n",
     "    Создает датасет для предсказания следующего токена.\n",
@@ -327,9 +377,15 @@
     "    for i in range(len(sequence) - seq_len):\n",
     "        inputs.append(sequence[i:i + seq_len])\n",
     "        targets.append(sequence[i + seq_len])\n",
-    "    return torch.tensor(inputs, dtype=torch.long), torch.tensor(targets, dtype=torch.long)\n",
-    "\n",
-    "\n",
+    "    return torch.tensor(inputs, dtype=torch.long), torch.tensor(targets, dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vocab = [0, 1, 2]\n",
     "vocab_size = len(vocab)\n",
     "embed_dim = 8\n",
@@ -355,8 +411,15 @@
     "    loss = criterion(logits, targets)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
-    "    losses.append(loss.item())\n",
-    "\n",
+    "    losses.append(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(4, 4))\n",
     "plt.plot(losses, label='Потери')\n",
     "plt.xlabel('Эпоха')\n",
@@ -417,8 +480,15 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
+    "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class AttentionSequenceModel(nn.Module):\n",
     "    def __init__(self, vocab_size, embed_dim, num_heads, max_seq_len, hidden_dim):\n",
     "        super(AttentionSequenceModel, self).__init__()\n",
@@ -440,9 +510,15 @@
     "        attn_output, _ = self.attention(x_emb, x_emb, x_emb, attn_mask=attn_mask)\n",
     "        last_output = attn_output[:, -1, :]\n",
     "        logits = self.fc(last_output)\n",
-    "        return logits\n",
-    "\n",
-    "\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_dataset(sequence, seq_len):\n",
     "    \"\"\"\n",
     "    Создаем датасет для предсказания следующего токена (аналогично LSTM-примера).\n",
@@ -451,9 +527,15 @@
     "    for i in range(len(sequence) - seq_len):\n",
     "        inputs.append(sequence[i:i + seq_len])\n",
     "        targets.append(sequence[i + seq_len])\n",
-    "    return torch.tensor(inputs, dtype=torch.long), torch.tensor(targets, dtype=torch.long)\n",
-    "\n",
-    "\n",
+    "    return torch.tensor(inputs, dtype=torch.long), torch.tensor(targets, dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vocab = [0, 1, 2]\n",
     "vocab_size = len(vocab)\n",
     "embed_dim = 8\n",
@@ -481,8 +563,15 @@
     "    loss = criterion(logits, targets)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
-    "    losses.append(loss.item())\n",
-    "\n",
+    "    losses.append(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(4, 4))\n",
     "plt.plot(losses, label='Потери')\n",
     "plt.xlabel(\"Эпоха\")\n",
@@ -491,8 +580,15 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.eval()\n",
     "test_seq = sequence[-seq_len:]\n",
     "test_input = torch.tensor([test_seq], dtype=torch.long)\n",
