--- a/Lectures/week09_nlp.ipynb
+++ b/Lectures/week09_nlp.ipynb
@@ -408,7 +408,51 @@
     "1. Сохранять информацию о порядке слов.\n",
     "2. Быть низкой размерности для уменьшения вычислительных затрат.\n",
     "3. Быть не слишком разряженным.\n",
-    "4. Учитывать различные формы одного слова как идентичные (например, «кот» и «коты»).\n"
+    "4. Учитывать различные формы одного слова как идентичные (например, «кот» и «коты»).\n",
+    "\n",
+    "Исторические, первым важным шагом в развитии векторов (эмбеддингов) является [Word2Vec](https://arxiv.org/abs/1301.3781) - это и конкретный алгоритм из статьи, и подход в целом.\n",
+    "\n",
+    "Вполне очевидно, что ставить в соответствие каждому отдельному слову своей вектор не эффективно. Куда лучше разбивать слов на элементы состоящие их популярных сочетаний букв, то есть опираясь на частоту - такой метод называется токенизация - он позволяет не раздувать похожими словами наш словарь.\n",
+    "\n",
+    "Наиболее популярные:\n",
+    "- [BPE](https://huggingface.co/learn/llm-course/ru/chapter6/5) (OpenAI) - слова (и подслова) рассматриваются не как символы Unicode, а как байты. Таким образом, базовый словарь имеет небольшой размер (256), но все символы, которые вы можете придумать будут иметь какое-то представление, а другие символы будем получать слиянием.\n",
+    "- [WordPiece](https://huggingface.co/learn/llm-course/ru/chapter6/6?fw=pt) (BERT) -  отличие заключается в способе выбора пары для слияния, алгоритм отдает предпочтение слиянию пар, отдельные части которых встречаются в словаре реже\n",
+    "- [Unigram](https://huggingface.co/learn/llm-course/ru/chapter6/7?fw=pt) (T5) -  рассчитывает потери по корпусу с учетом текущего словарного запаса, для каждого символа вычисляет, насколько увеличится общая потеря, если этот символ будет удален, и ищет символы, которые увеличат ее меньше всего.\n",
+    "\n",
+    "Токенизация с использованием кластеризации подробно описана в [статье](https://arxiv.org/abs/2301.10472) - объединяем похожие языки в кластера и уже кластерам даем определенное место в словаре.\n",
+    "\n",
+    "Именно из-за токенизации модели не могли пройти тест с подсчётом букв «r» в слове «strawberry» (и все еще не могут, просто дообучились), модели просто видят текст иначе."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiktoken\n",
+    "\n",
+    "def count_tokens(text):\n",
+    "    tokenizer = tiktoken.get_encoding(\"cl100k_base\")\n",
+    "    tokens = tokenizer.encode(text)\n",
+    "    return tokens, len(tokens)\n",
+    "\n",
+    "text = \"Привет, токенизатор от GPT4\"\n",
+    "count_tokens(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Посмотреть и сравнить токенизаторы можно [тут](https://platform.openai.com/tokenizer), или в ячейке выше, используя библиотеку `tiktoken` от OpenAI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../images/word2vec.webp\" alt=\"Дерево решений\" width=\"500\">"
    ]
   },
   {
@@ -769,7 +813,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Подробные визуализации"
+    "#### Подробнее про архитектуру"
    ]
   },
   {
@@ -790,7 +834,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://jalammar.github.io/images/t/Transformer_decoder.png\" alt=\"Описание изображения\" width=\"600\">"
+    "- **Self-attention** часть отвечает за коммуникацию, \n",
+    "- **Feed Forward** за вычисления"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feed Forward это просто два слоя D_m -> D_ff -> ReLU -> D_m (обычно D_ff в 4 раза больше D_m)\n",
+    "\n",
+    "Именно они это 2/3 3/4 всех весов модели, а значит в них и должна быть [информация](https://arxiv.org/abs/2012.14913) - большой промежуточный вектор просто показывает какую информацию их матрицы второго слоя нужно взять (а значит и содержит информацию), в то время как матрица первого слоя указывает с какими весами эту информацию необходимо взять.\n",
+    "\n",
+    "Кроме того, подобно сверткам, чем выше номер энкодер блока, тем более в нем верхнеуровневые признаки и семантические паттерны хранятся."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Первоначально каждому токену ставится в соотвествие вектор в большой матрице (размера словаря) точно также как это делается в Word2Vec"
    ]
   },
   {
@@ -811,6 +874,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Слова в предложении как-то связаны между собой. Попробуем выразить это с помощью трех различных матриц, у каждой из которых есть свой смысл. Одна из размерностей матрицы обязательно совпадает с размерностью эмбеддинга, для проведения матричного умножения."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"https://jalammar.github.io/images/t/transformer_self_attention_vectors.png\" alt=\"Описание изображения\" width=\"600\">"
    ]
   },
@@ -818,7 +888,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Query - вопрос из токена в контекст предложения\n",
+    "\n",
+    "Key - что это слово значит в контексте\n",
+    "\n",
+    "Между векторами, полученными при умножении на эмбеддинга на эти матрицы, считаем dot product - это привычное скалярное произведение. Чем оно больше,тем больше связь нашего query токена к одному из key токенов в предложении, а чтобы посчитать ее мы считаем произведение `каждый с каждым`. Поэтому сложность attention квадратична, а значит тем она эффективнее, чем лучше токенизатор. Существуют, однако, и модификации которые улучшают производительность до сложность [O(n log n)](https://arxiv.org/abs/2001.04451) и даже до [O(n)](https://arxiv.org/abs/2006.04768). Кроме того \n",
+    "есть подходы [Sliding Window](https://arxiv.org/abs/2004.05150) и [FAVOR+](https://arxiv.org/abs/2009.14794) использующие части матрицы внимания (например, смотреть на несколько соседних слов) и другие инженерные трюки.\n",
+    "\n",
+    "Полученные скалярные произведения делятся на корень из размерности матрицы, это помогает бороться с растущей при матричном умножении дисперсией.\n",
+    "\n",
+    "> Мы всегда хотим чтобы внутри модели между разными слоями распределение было близкое к нормальному.\n",
+    "\n",
+    "Полученные нормированные значения уже подаются в `softmax`. Полученные веса умножаем на value вектор (который по аналогии с предыдущими двумя получается умножением на матрицу Value, в целом он может быть отличного размера от q и k векторов, да и вообще может быть удален) - этот вектор хранит смысл."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"https://jalammar.github.io/images/t/self-attention-output.png\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Поскольку все сводится к умножению матриц, то слои Self-Attention отлично параллелится на GPU (cuda)"
    ]
   },
   {
@@ -839,7 +934,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Для большей обобщающей способности будем использовать несколько триплетом матриц Q, K, V, при этом каждый такой триплет называется головой - MultiHead Self-Attention (MSA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"https://jalammar.github.io/images/t/transformer_multi-headed_self-attention-recap.png\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Общий порядок:\n",
+    "- Входной текст\n",
+    "- Разбиваем его на токены\n",
+    "- Токены переводим в эмбеддинги\n",
+    "- В каждой голове эмбеддинги умножаем на матрицы Q, K, V\n",
+    "- Считаем attention (формула с softmax) получая z\n",
+    "- Объединяем z с разных слоев\n",
+    "- Пропускаем его через линейный слой"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Все описанное выше объединяется в схему, предложенную в популярнейшей статье [Attention Is All You Need](https://arxiv.org/abs/1706.03762)."
    ]
   },
   {
@@ -853,7 +976,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[TensorFlow Tensor2Tensor](https://colab.research.google.com/github/tensorflow/tensor2tensor/blob/master/tensor2tensor/notebooks/hello_t2t.ipynb)"
+    "Ноутбук показывающий связи слов в предложении [TensorFlow Tensor2Tensor](https://colab.research.google.com/github/tensorflow/tensor2tensor/blob/master/tensor2tensor/notebooks/hello_t2t.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Дополнительные особенности"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Говоря о связи слов - пока никак не оговаривалась проблема учета порядка слов в предложении (хотя она и уже показана на схеме выше).\n",
+    "\n",
+    "Необходимо использовать некую добавку (именно сложение, не конкатинацию), которая бы отражала позицию определенного токена. В оригинальной статье было проведено исследование двух вариантов - обучение дополнительной матрицы позиционных эмбеддингов и гармоническое разложение.\n",
+    "\n",
+    "В настоящее время матрица обычно обучается, но есть исследования [относительного позиционного кодирования](https://arxiv.org/abs/1803.02155), разбивая любую последовательность на бины, а также [матриц поворота для позиционного кодирования](https://arxiv.org/abs/2104.09864)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для улучшения протекания градиентов через сеть, как и в сверточных глубоких сетях, используется residual connection - позиционные эмбеддинги передаются после self-attention и объединяются с векторами z. После объединения также применяется LayerNorm.\n",
+    "\n",
+    "Место применения LayerNorm в общей архитектуре можно и поменять, используя вместо описанного выше Post-LN (то есть после сложения и после self-attention, а также после сложения и после feed-forward) так называемый [Pre-LN](https://arxiv.org/abs/2002.04745), который делается как бы в слое - перед self-attention и перед feed-forward.\n",
+    "\n",
+    "> Часто возникает вопрос почему LayerNorm, а не BatchNorm? Вспомним что BatchNorm нормализует по батчу используя статистики собранные во время обучения, в то время как LayerNorm не зависит от статистик обучающий данных и нормализует каждый токен независимо (что важно, поскольку часть последовательности батча модель иногда еще не должна была видеть, а так она узнает статистики) и ведет себя одинаково на этапах обучения и инференса."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://www.researchgate.net/publication/361981638/figure/fig2/AS:1177579797118977@1657768310211/a-Post-LN-original-Transformer-b-Pre-LN.ppm\" alt=\"Описание изображения\" width=\"400\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Разберем подробнее Encoder-Decoder Attention (Cross-Attention). Операции происходящие в слоях ровно такие же, разница лишь в том, что теперь запросы (query) используем из декодера, а ключи и значения (key, value) из энкодера.\n",
+    "\n",
+    "Декодер знает что уже было сгенерировано и полностью определяет какое слово будет сгенерировано (пусть, как в статье, он пишет на французском языке) и ему нужно понять какую часть исходного предложения сейчас использовать - поэтому он делает запрос к энкодеру и тот дает ему наиболее релевантную информацию.\n",
+    "\n",
+    "> Важно, что у декодера маскированная матрица внимания (он не может смотреть в будущее) мы зануляем (-inf) верхний треугольник в матрице внимания.\n",
+    "\n",
+    "> Для Cross-Attention нужны только выходы верхнего из слоев энкодера (и даже только k и v веткора) поэтому их можно кэшировать.\n",
+    "\n",
+    "> Декодер при этом работает с последовательностью на своем языке (изначально с пустой, `<bos>`), в которой точно также используются позиционные эмбеддинги."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://jalammar.github.io/images/t/Transformer_decoder.png\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обращаем внимание что в декодере есть как self- (но именно masked), так и cross- attention, а значит, например, что есть и свои K и V матрицы. Их порядок именно такой для более получения более информативного запроса q с матрицам энкодера - при таком порядке в запросе будет информация об уже сгенерированной последовательности."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://jalammar.github.io/images/t/transformer_resideual_layer_norm_3.png\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://jalammar.github.io/images/t/transformer_decoding_1.gif\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://jalammar.github.io/images/t/transformer_decoding_2.gif\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Итоговое предсказание делается с помощью линейного слоя переводящего эмбеддинг в вектор размерности словаря. Затем применяется softmax помогает выбрать слово, которые будет сгенерировано.\n",
+    "\n",
+    "Для оптимизации можно применять иерархический softmax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://jalammar.github.io/images/t/transformer_decoder_output_softmax.png\" alt=\"Описание изображения\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если мы оставим декодер без энкодера (и, соответственно, без cross-attention) используя masked self-attention, то мы получим GPT-like модели.\n",
+    "\n",
+    "Если убрать декодер, мы научимся извлекать какие-то векторные представления из текста, но не генерировать новый текст, то мы получим BERT-like модели."
    ]
   },
   {
@@ -880,24 +1114,26 @@
     "### BERT\n",
     "- **BERT (Bidirectional Encoder Representations from Transformers):** энкодерная архитектура, использующая Transformer.\n",
     "- Направлен на глубокое понимание текста.\n",
+    "- Очень популярен для downstream задач (когда берется готовая модель и делается минимально дообучение)\n",
     "\n",
     "**Основные задачи при обучении:**\n",
     "1. **Masked Language Modeling (MLM):**\n",
-    "   - Часть токенов маскируется специальным символом $[MASK]$, и модель обучается их предсказывать.\n",
+    "   - Часть токенов маскируется специальным символом $[MASK]$, и модель обучается их предсказывать. В тексте может быть 15% таких токенов, среди них 80% реально маскируется, в 10% ставится случайный токен из словаря и в 10% ставится оригинальный токен (и всё равно модель пытается его предсказать).\n",
+    "   - Тут 80% [MASK] - чтобы модель действительно училась восстанавливать по контексту, а не запоминать.\n",
+    "   - 10% случайных - чтобы модель не могла полагаться на токен [MASK] и для устойчивости к шуму.\n",
+    "   - 10% без изменения - чтобы модель научилась предсказывать токен, даже если он уже виден.\n",
+    "   - BERT вводит специальный токен [CLS] в начало последовательности, который участвует в self-attention и содержит информацию о предложении целиком.\n",
     "   - Формула вероятности предсказания:\n",
     "     $$\n",
     "     P(x_{\\text{masked}} | x_{\\text{context}}) = \\prod_{i \\in \\text{masked}} P(x_i | x_{\\text{context}}).\n",
     "     $$\n",
     "2. **Next Sentence Prediction (NSP):**\n",
     "   - Задача бинарной классификации, определяющая, являются ли два предложения последовательными.\n",
+    "   - Для ее решения как раз и нужен был [CLS] токен, а точнее pooled_output.\n",
+    "   - Добавляем также [SEP] как наследие третьего компонента эмбеддинга (token embedding, position embedding, segment embedding) для разделения текса на два предложения.\n",
+    "   - Не все модели с \"BERT\" в названии решают эту задачу, например, RoBERTa нет.\n",
     "\n",
-    "**Особенности:**\n",
-    "- Токены представлены как подстроки из часто встречающихся групп символов, для оптимизации (BPE, byte-pair encoding).\n",
-    "- Порядок слов кодируется с помощью позиционных эмбеддингов, например, можно раскладывать по гармоникам синусов и косинусов (один из вариантов):\n",
-    "  $$\n",
-    "  PE_{(pos, 2i)} = \\sin(pos / 10000^{2i/d}), \\quad PE_{(pos, 2i+1)} = \\cos(pos / 10000^{2i/d}),\n",
-    "  $$\n",
-    "  где $ pos $ — позиция слова, $ i $ — индекс вектора эмбеддинга, $ d $ — размерность эмбеддинга."
+    "Мы можем [развивать эту идею](https://arxiv.org/abs/2205.05131) и выкидывать не токены (и даже не слова), в целые предложения или параграфы текста, однако это и не encoder-only модель."
    ]
   },
   {
