--- a/Lectures/week12_diffusion.ipynb
+++ b/Lectures/week12_diffusion.ipynb
@@ -413,6 +413,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Сам курс: https://apps.openedu.ru/learning/course/course-v1:hse+RL_BASICS+2024/home\n",
+    "\n",
+    "Репозиторий с материалами: https://github.com/yandexdataschool/Practical_RL\n",
+    "\n",
+    "### Многорукие бандиты\n",
+    "\n",
+    "нет наблюдаемой внешней среды\n",
+    "действие не влияет на среду\n",
+    "подкрепление сразу\n",
+    "подкрепление - функция вероятности от действия\n",
+    "\n",
+    "дилемма explore exploit (исследование эксплуатация)\n",
+    "\n",
+    "greedy random подходы\n",
+    "\n",
+    "эписилон-жадный алгоритм\n",
+    "\n",
+    "алгоритм UCB (Upper Confidence Bound) и его параметры\n",
+    "\n",
+    "алгоритм MAB\n",
+    "\n",
+    "\n",
+    "### Марковские процессы принятия решений\n",
+    "\n",
+    "MDP\n",
+    "\n",
+    "Коэффициент дисконтированияв \n",
+    "\n",
+    "Среда может менять свои состояния\n",
+    "\n",
+    "Обычно строят граф состояний, сами состояния дискретны\n",
+    "\n",
+    "Функция ценности состояния V(s)\n",
+    "\n",
+    "Функция ценности действия Q(s, a)\n",
+    "\n",
+    "Уравнение Белмана (с и без коэффициента скорости обновления) и его сходимости\n",
+    "\n",
+    "Q learning, подбор количества шагов\n",
+    "\n",
+    "### Аппроксимация в RL\n",
+    "\n",
+    "Алгоритм DQN\n",
+    "\n",
+    "Double DQN\n",
+    "\n",
+    "Monte Carlo\n",
+    "\n",
+    "Dueling Monte Carlo\n",
+    "\n",
+    "Dueling DQN и стандартный DQN\n",
+    "\n",
+    "### Алгоритмы для непрерывного пространства действий. Методы итерации по стратегиям.\n",
+    "\n",
+    "Генетическая оптимизация\n",
+    "\n",
+    "Покоординатный подьем\n",
+    "\n",
+    "Policy Gradient\n",
+    "\n",
+    "value function\n",
+    "\n",
+    "Алгоритм Reinforce с базой и без\n",
+    "\n",
+    "### Алгоритмы Actor-Critic\n",
+    "\n",
+    "PPO\n",
+    "\n",
+    "A2C и A3C\n",
+    "\n",
+    "Другие алгоритмы actor-critic\n",
+    "\n",
+    "SAC и его особенности\n",
+    "\n",
+    "### Алгоритмы Model-based RL\n",
+    "\n",
+    "эффект бабочки\n",
+    "\n",
+    "Dyna-Q\n",
+    "\n",
+    "MuZero\n",
+    "\n",
+    "AlphaZero\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Описание ключевых алгоритмов\n",
     "\n",
     "#### Proximal Policy Optimization (PPO)\n",
