--- a/Workshops/week01_metrcs.ipynb
+++ b/Workshops/week01_metrcs.ipynb
@@ -19,12 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
     "\n",
     "y_true = np.array([0, 1, 1, 0, 0, 1, 0, 0, 1, 0])\n",
     "y_pred = np.array([0, 1, 0, 0, 1, 1, 1, 0, 1, 0])\n",
@@ -38,8 +37,10 @@
     "### Accuracy (Точность)\n",
     "Accuracy — это доля правильно классифицированных объектов от общего числа примеров:\n",
     "\n",
+    "> Если из 100 вопросов модель ответила правильно на 90, то ее точность 90%.\n",
+    "\n",
     "$$\n",
-    "Accuracy = \\frac{TP + TN}{TP + TN + FP + FN}\n",
+    "Accuracy = \\frac{\\text{Количество правильных ответов}}{\\text{Общее количество вопросов}} = \\frac{TP + TN}{TP + TN + FP + FN}\n",
     "$$\n",
     "\n",
     "- **Где:**  \n",
@@ -47,6 +48,31 @@
     "  - $ TN $ (True Negative) — количество верно предсказанных отрицательных примеров.  \n",
     "  - $ FP $ (False Positive) — количество ошибочно отнесенных к положительному классу примеров.  \n",
     "  - $ FN $ (False Negative) — количество ошибочно отнесенных к отрицательному классу примеров.  \n",
+    "\n",
+    "Представьте, что у вас есть модель, которая предсказывает, есть ли у человека собака.\n",
+    "\n",
+    "Пусть у нас есть 10 человек:\n",
+    "- 5 человек с собаками (Положительный класс)\n",
+    "- 5 человек без собак (Отрицательный класс)\n",
+    "\n",
+    "Наша модель сделала следующие предсказания:\n",
+    "- **Истинные положительные (TP):** Модель правильно определила, что у 4 человек есть собаки.\n",
+    "- **Истинные отрицательные (TN):** Модель правильно определила, что у 4 человек нет собак.\n",
+    "- **Ложные положительные (FP):** Модель ошибочно определила, что у 1 человека есть собака (хотя ее нет).\n",
+    "- **Ложные отрицательные (FN):** Модель ошибочно определила, что у 1 человека нет собаки (хотя она есть).\n",
+    "\n",
+    "Тогда точность будет:\n",
+    "$$\n",
+    "Accuracy = \\frac{TP + TN}{TP + TN + FP + FN} = \\frac{4 + 4}{4 + 4 + 1 + 1} = \\frac{8}{10} = 0.8 \\text{ или } 80\\%\n",
+    "$$\n",
+    "\n",
+    "Это означает, что модель была права в 80% случаев.\n",
+    "\n",
+    "<div class=\"alert alert-danger\">\n",
+    "<b>Замечание:</b> \n",
+    "Представьте, что вы разрабатываете модель для обнаружения очень редкого заболевания. Из 1000 человек только 10 болеют (1%). Остальные 990 здоровы (99%). Если ваша модель просто всегда будет предсказывать \"здоров\", то ее точность будет 0.99 или 99%. Модель с точностью 99% кажется отличной, но она не обнаружила ни одного больного человека и ее высокая точность абсолютно бесполезна.\n",
+    "Accuracy не учитывает важность ошибок разного рода (ложных положительных и ложных отрицательных) и не подходит для несбалансированных классов.\n",
+    "</div>\n",
     "\n",
     "**Применение:**  \n",
     "- Хорошо подходит, когда классы сбалансированы.  \n",
@@ -77,7 +103,14 @@
     "$$\n",
     "\n",
     "**Применение:**  \n",
-    "- Используется, когда важно минимизировать количество ложных срабатываний (FP), например, в медицинских тестах."
+    "- Используется, когда важно минимизировать количество ложных срабатываний (FP), то есть цена ошибки первого рода высока, например, в медицинских тестах.\n",
+    "\n",
+    "> **Пример: Спам-фильтр почты**\n",
+    "> Допустим, мы обучаем модель отправлять спам в отдельную папку.\n",
+    "> - *Положительный класс (Positive) - письмо является спамом.\n",
+    "> - *False Positive (FP) -важное письмо от начальника или уведомление из банка ошибочно помечено как спам и удалено с глаз долой.\n",
+    ">\n",
+    "> В данном случае **Precision** критически важна. Мы не хотим, чтобы модель ошибалась и закидывала нормальные письма в спам. Лучше пропустить немного реального спама во «Входящие» (понизив Recall), чем потерять одно важное письмо (понизив Precision)."
    ]
   },
   {
@@ -104,7 +137,14 @@
     "$$\n",
     "\n",
     "**Применение:**  \n",
-    "- Важен в задачах, где критично не пропускать положительные примеры, например, при выявлении мошенничества."
+    "- Важен в задачах, где критично не пропускать положительные примеры, например, при выявлении мошенничества.\n",
+    "\n",
+    "> **Пример: Диагностика тяжелых заболеваний**\n",
+    "> Допустим, модель анализирует снимки легких, чтобы найти болезнь.\n",
+    "> - *Положительный класс (Positive):* Человек болен.\n",
+    "> - *False Negative (FN):* Человек болен, но модель сказала, что он здоров, и отправила его домой без лечения.\n",
+    ">\n",
+    "> В данном случае **Recall** — самая важная метрика. Если мы пропустим больного пациента, это может стоить ему жизни. Пусть лучше модель ложно сработает на здоровом человеке (False Positive), и врачи проведут дополнительные анализы, чем она пропустит реально больного. Мы готовы жертвовать Precision ради высокого Recall."
    ]
   },
   {
@@ -131,7 +171,29 @@
     "$$\n",
     "\n",
     "**Применение:**  \n",
-    "- Используется, когда важно найти баланс между Precision и Recall, например, в задаче классификации спама."
+    "- Используется, когда важно найти баланс между Precision и Recall.\n",
+    "- Полезна (но не идеальна) в задачах с несбалансированными классами (в отличие от Accuracy), так как требует хорошего показателя и по точности, и по полноте одновременно.\n",
+    "\n",
+    "Почему именно среднее гармоническое? Среднее гармоническое обладает свойством «пессимизма»: оно всегда ближе к меньшему из чисел.\n",
+    "\n",
+    "> **Пример:**\n",
+    "> Представьте модель, которая предсказывает, что все объекты — положительные.\n",
+    "> - У неё будет идеальный Recall = 1.0 (ведь всех положительных она нашла).\n",
+    "> - Но Precision будет очень низким (например, 0.1), так как она назвала положительными кучу лишнего.\n",
+    ">\n",
+    "> 1. Среднее арифметическое: $\\frac{1.0 + 0.1}{2} = 0.55$.\n",
+    ">\n",
+    "> 2. F1-score: $2 \\times \\frac{1.0 \\times 0.1}{1.0 + 0.1} \\approx 0.18$.\n",
+    "\n",
+    "#### Обобщение\n",
+    "F1-score предполагает, что точность и полнота для нас **одинаково важны**. Однако это не всегда так. Существует более общая формула $F_\\beta$, где коэффициент $\\beta$ определяет вес Recall по сравнению с Precision:\n",
+    "\n",
+    "$$\n",
+    "F_\\beta = (1 + \\beta^2) \\times \\frac{Precision \\times Recall}{(\\beta^2 \\times Precision) + Recall}\n",
+    "$$\n",
+    "\n",
+    "- $F_1$ ($\\beta = 1$) — стандартная F-мера. Precision и Recall равнозначны.\n",
+    "- $F_2$ ($\\beta = 2$) — Recall важнее, чем Precision, и так далее."
    ]
   },
   {
@@ -150,9 +212,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "### ROC AUC (Площадь под ROC-кривой)\n",
-    "ROC-кривая показывает зависимость между True Positive Rate (TPR) и False Positive Rate (FPR):\n",
+    "ROC AUC — это метрика для оценки качества бинарной классификации, которая оценивает модель в целом, не привязываясь к конкретному порогу принятия решения (threshold). Сама ROC-кривая показывает зависимость между True Positive Rate (TPR) и False Positive Rate (FPR):\n",
     "\n",
     "$$\n",
     "TPR = \\frac{TP}{TP + FN}, \\quad FPR = \\frac{FP}{FP + TN}\n",
@@ -162,7 +223,23 @@
     "\n",
     "**Применение:**  \n",
     "- Позволяет оценить модель при различных порогах классификации.  \n",
-    "- Подходит для задач с несбалансированными классами."
+    "- Подходит для задач с несбалансированными классами.\n",
+    "\n",
+    "Модель классификации обычно выдает вероятность принадлежности к классу 1 (например, `0.85`, `0.12`, `0.64`). Чтобы превратить это в ответ «Да/Нет», нам нужен **порог (threshold)**. Обычно это `0.5`, но его можно менять.\n",
+    "Для того чтобы построить метрику:\n",
+    "1. Сортируем все предсказания модели от самой высокой уверенности к самой низкой.\n",
+    "2. Начинаем двигать порог принадлежности к классу от `1.0` до `0.0`.\n",
+    "    - Если порог очень строгий (1.0), мы никого не классифицируем как 1. $TPR=0, FPR=0$ (точка 0,0).\n",
+    "    - Если мы немного снижаем порог, мы начинаем захватывать истинные единицы (TPR растет), но иногда случайно захватываем и нули (FPR тоже растет).\n",
+    "    - Если порог опустить до `0.0`, мы всех назовем классом 1. $TPR=1$, $FPR=1$ (точка 1,1).\n",
+    "\n",
+    "В итоге наша кривая — это линия, соединяющая точки (FPR, TPR) для всех возможных порогов.\n",
+    "\n",
+    "Свойства:\n",
+    "- 0.5 — модель гадает случайно (как монетка). График идет по диагонали.\n",
+    "- 1.0 — идеальная модель.\n",
+    "\n",
+    "> В дополнение можно сказать про **Precision-Recall Curve (PR AUC)** — во многом похожую метрику, с той лишь разницей, что она строится в осях Recall (X) и Precision (Y). ROC AUC может быть слишком оптимистичным на сильно несбалансированных выборках, так что если целевой класс очень редкий, лучше смотреть на **PR AUC**."
    ]
   },
   {
@@ -171,10 +248,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import roc_auc_score, roc_curve\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "print(\"ROC AUC:\", roc_auc_score(y_true, y_proba))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpr, tpr, thresholds = roc_curve(y_true, y_proba)\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(fpr, tpr, color='blue', lw=2, label=f'ROC curve')\n",
+    "plt.plot([0, 1], [0, 1], color='gray', lw=2, linestyle='--', label='Случайное угадывание')\n",
+    "\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.xlabel('False Positive Rate (1 - Specificity)')\n",
+    "plt.ylabel('True Positive Rate (Sensitivity)')"
    ]
   },
   {
@@ -790,13 +886,6 @@
     "# help(sklearn.metrics)\n",
     "dir(sklearn.metrics)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
